  efficient, and a race condition which caused "Ignoring unknown test"
  messages has been removed. Thanks to Dhinakar K for the report.

  The Grinder can now optionally use J2SE 5 System.nanoTime() which
  might give more precision on some platforms. Times are still
  reported in milliseconds. See the grinder.useNanoTime property.
  Thanks to Tom Barnes for requesting this feature.


Grinder 3.0-beta28
------------------

  Updates to the Italian translation from Meo Bogliolo.

  Refactoring of statistics package API. This may affect existing
  custom plugins. See PluginProcessContext.getStatistics.

  New Russian translation from Konstantin Ignatyev.

  Fix the TCPProxy port forwarding mode to correctly generate https
  URLs. (Bug 1324640).

  Fix the exception logging to include Jython stack traces. Simplify
  the exception log formatting.

  Java methods can now be wrapped. The resulting object should be
  invoked Python style, i.e. non-static methods must be supplied with
  a 'self' instance as the first argument.

  New grinder.debug.singleprocess property. If set to true, the agent
  process spawns engines in threads rather than processes, using
  special classloaders to isolate the engines. This allows the engine
  to be easily run in a debugger. This is primarily a tool for
  debugging The Grinder engine, but it might also be useful to
  advanced users.

  More relaxed handling of invalid dates in Cookies. Requested by
  Martin Wagner.

  Nicer output for ConnectExceptions and UnknownHost exceptions. (Bug
  927828).

  Handle Cookies with empty expires attribute. (Bug 982834).

  Added a pop-up menu to the editor file tree.

  Support Jython 2.2a1. Simply add the Jython 2.2a1 jython.jar to the
  start of your class path. Thanks to Martin Wagner for prompting me
  to do this.

  The documentation is now distributed in a separate zip file.


Grinder 3.0-beta27
------------------

  The TCPProxy is now relaxed about empty query strings. Thanks to